--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "image",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "pacoooh",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -19,10 +18,26 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@ionic-native/base64": "^5.29.0",
+    "@ionic-native/camera": "^5.29.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/crop": "^5.29.0",
+    "@ionic-native/file": "^5.29.0",
+    "@ionic-native/file-opener": "^5.29.0",
+    "@ionic-native/image-resizer": "^5.29.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@types/chart.js": "^2.9.27",
+    "chart.js": "^2.9.4",
+    "com-badrit-base64": "^0.2.0",
+    "cordova-android": "8.1.0",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-crop": "^0.4.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-opener2": "^3.0.5",
+    "info.protonet.imageresizer": "^0.1.1",
+    "patternomaly": "^1.3.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -38,6 +53,12 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^6.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -50,5 +71,28 @@
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-file": {},
+      "info.protonet.imageresizer": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file-opener2": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "com-badrit-base64": {},
+      "cordova-plugin-crop": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
